--- a/web/css/style.css
+++ b/web/css/style.css
@@ -39,19 +39,13 @@ html body {
   border-radius: 6px;
 }
 
-#stats {
-  padding-left: 16px;
-}
-
-#stats img {
-  margin-left: -5px;
-}
-
-#stats .pull-left {
-  padding-left: 20px;
+#stats .padding {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 #stats h1 {
+  word-wrap: break-word;
   margin-top: 12px;
 }
 
